Clean up payloadVersion lifecycle
This is something that cannot ever change, make sure we have that
covered.

Change-Id: I1ce6a888ce39af7722f0c33640387ca158a19f41
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>